# studiobrain-templates

./: CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.d.ts  index.js  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
_PLUGINS/: PLUGIN_CATALOG.md  README.md  _plugin_settings.json  _plugins.json
_PLUGINS/_shared/: plugin-theme.css
_PLUGINS/assembly-composer/: plugin.json
_PLUGINS/blender-bridge-wasm/: plugin.json
_PLUGINS/comfyui-workflows/: plugin.json
_PLUGINS/comfyui-workflows-wasm/: Cargo.toml  plugin.json
_PLUGINS/comparison-wasm/: Cargo.toml  build.sh  plugin.json
_PLUGINS/data-notes/: plugin.json
_PLUGINS/data-notes-wasm/: Cargo.toml  plugin.json
_PLUGINS/discord-poster-wasm/: build.sh  plugin.json
_PLUGINS/entity-validator/: plugin.json
_PLUGINS/google-sheets-sync-wasm/: Cargo.toml  build.sh  plugin.json
_PLUGINS/hello-world/: README.md
_PLUGINS/hello-world-wasm/: Cargo.toml
_PLUGINS/import-export-pipeline-wasm/: Cargo.toml  build.sh
_PLUGINS/jira-sync-wasm/: Cargo.toml
_PLUGINS/kanban-board-wasm/: build.sh  plugin.json
_PLUGINS/lora-trainer/: plugin.json
_PLUGINS/lora-trainer-wasm/: Cargo.toml  build.sh  plugin.json
_PLUGINS/music-gen/: plugin.json
_PLUGINS/music-gen-wasm/: Cargo.toml  build.sh  plugin.json
_PLUGINS/notion-sync/: plugin.json
_PLUGINS/notion-sync-wasm/: Cargo.toml
_PLUGINS/obsidian-vault/: plugin.json
_PLUGINS/obsidian-vault-wasm/: build.sh
_PLUGINS/pdf-exporter-wasm/: Cargo.toml  build.sh
_PLUGINS/prompt-engine/: plugin.json
_PLUGINS/showrunner-exporter/: plugin.json
_PLUGINS/showrunner-exporter-wasm/: build.sh
_PLUGINS/social-publisher/: plugin.json
_PLUGINS/social-publisher-wasm/: build.sh  plugin.json
_PLUGINS/time-tracker/: plugin.json
_PLUGINS/time-tracker-wasm/: plugin.json
_PLUGINS/uefn-exporter/: plugin.json
_PLUGINS/uefn-exporter-wasm/: Cargo.toml  build.sh
_PLUGINS/unity-exporter-wasm/: build.sh  plugin.json
_PLUGINS/unreal-exporter-wasm/: Cargo.toml  plugin.json
_PLUGINS/version-history/: plugin.json
_PLUGINS/voice-forge-wasm/: build.sh  plugin.json
_PLUGINS/webhook-automations-wasm/: Cargo.toml  plugin.json
_PLUGINS/youtube-manager/: plugin.json
_PLUGINS/youtube-manager-wasm/: Cargo.toml  build.sh
_RULES/Custom/: README.md
_RULES/Standard/: BRAND_RULES.md  CHARACTER_WORKFLOW.md  CONTENT_RULES.md  DISTRICT_RULES.md  FACTION_RULES.md  IMAGE_GENERATION_RULES.md  LOCATION_RULES.md  QUEST_WORKFLOW.md  UNIVERSE_RULES.md  VOICE_GENERATION_RULES.md  WORKFLOW_RULES.md  WORLD_LORE_RULES.md  assembly_constraints.yaml  character_consistency.yaml  dialogue_flow.yaml  style_guide.yaml  world_lore.yaml
_SCHEMAS/: README.md  assembly.json  brand.json  character.json  dialogue.json  event.json  faction.json  item.json  style_bible.json  timeline.json  universe.json
maps/: Dungeon_Grid_MAP_TEMPLATE.md
plugins/: PLUGIN_DEVELOPMENT.md  _plugin_settings.json  _plugins.json
plugins/kanban-board-wasm/: Cargo.toml
plugins/kanban-board-wasm/src/: lib.rs
plugins/ltx2-pipeline-wasm/: Cargo.toml  README.md  build.sh  plugin.json  plugin.wasm  plugin.wasm.sha256
plugins/ltx2-pipeline-wasm/src/: lib.rs
plugins/voice-forge-wasm/: Cargo.toml
plugins/voice-forge-wasm/frontend/panels/: voice-studio.html
plugins/voice-forge-wasm/src/: lib.rs
rules/: ASSEMBLY_RULES.md  BIOME_RULES.md  CHARACTER_RULES.md  DIALOGUE_RULES.md  GENERATION_RULES.md  ITEM_RULES.md  ITEM_WORKFLOW.md  JOB_RULES.md  LOCATION_WORKFLOW.md  PROMPT_ENGINE_RULES.md  RULES_INDEX.md  STORY_RULES.md  TIMELINE_RULES.md
schemas/: README.md  _base.json  _compat.json  biome.json  campaign.json  district.json  job.json  layout.json  location.json  pack.json  plugin.json  quest.json  skill.yaml.json
scripts/: validate.py
studiobrain_templates/: _DOCUMENTS  _MAPS  _PLUGINS  _RULES  _SCHEMAS  _SKILLS  _TEMPLATES  __init__.py
(+328 files in other folders)
