[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studiobrain-templates"
version = "0.1.0"
description = "StudioBrain entity templates, generation rules, and plugin definitions"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Biloxi Studios Inc."}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/BiloxiStudios/studiobrain-templates"

[tool.setuptools.packages.find]
where = ["."]
include = ["studiobrain_templates*"]

[tool.setuptools.package-data]
studiobrain_templates = [
    "_TEMPLATES/**/*.md",
    "_TEMPLATES/**/*.json",
    "_TEMPLATES/**/*.yaml",
    "_TEMPLATES/**/*.yml",
    "_RULES/**/*.md",
    "_RULES/**/*.yaml",
    "_RULES/**/*.yml",
    "_PLUGINS/**/*.json",
    "_PLUGINS/**/*.css",
    "_PLUGINS/**/*.html",
    "_PLUGINS/**/*.py",
    "_PLUGINS/**/*.js",
    "_SCHEMAS/**/*.json",
    "_MAPS/**/*.md",
    "_MAPS/**/*.json",
    "_MAPS/**/*.yaml",
    "_MAPS/**/*.yml",
    "_DOCUMENTS/**/*.md",
    "_DOCUMENTS/**/*.json",
    "_DOCUMENTS/**/*.yaml",
    "_DOCUMENTS/**/*.yml",
    "_SKILLS/**/*.md",
    "_SKILLS/**/*.json",
    "_SKILLS/**/*.yaml",
    "_SKILLS/**/*.yml",
]
