[package]
name = "kanban-board-wasm"
version = "1.0.0"
edition = "2021"
description = "StudioBrain kanban-board plugin compiled to WASM via Extism PDK"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
