[package]
name = "ltx2-pipeline-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM protocol adapter for LTX-2 ltx-pipelines server. Implements adapt_request, adapt_response, and health_check for the model-manager managed service system."
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
